Make Multi-line Field Exclude ending Newline

--- a/manifests/a/Axure/AxureRP/10/10.0.0.3857/Axure.AxureRP.10.locale.en-US.yaml
+++ b/manifests/a/Axure/AxureRP/10/10.0.0.3857/Axure.AxureRP.10.locale.en-US.yaml
@@ -25,7 +25,7 @@ Tags:
 - diagram
 - Axure
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Feature Updates
   - Upgraded to .NET 6 for improved performance
 
