Make Multi-line Field Exclude ending Newline

--- a/manifests/a/Axure/AxureRP/10/10.0.0.3863/Axure.AxureRP.10.locale.en-US.yaml
+++ b/manifests/a/Axure/AxureRP/10/10.0.0.3863/Axure.AxureRP.10.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - user-interface
 - wireframe
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Feature Updates
   Enhanced Duplicate: You can now duplicate widgets with consistent spacing.
   - Widgets can be duplicated using [CTRL]/[CMD] + [D] or [CTRL]/[OPT] + Drag Selection.
