Make Multi-line Field Exclude ending Newline

--- a/manifests/a/Axure/AxureRP/10/10.0.0.3865/Axure.AxureRP.10.locale.en-US.yaml
+++ b/manifests/a/Axure/AxureRP/10/10.0.0.3865/Axure.AxureRP.10.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - user-interface
 - wireframe
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Bug Fixes & Performance Enhancements
   - Fixed dynamic panel content not saving correctly when panel is converted to a component
   - Fixed error converting to a component while a text link is currently selected on Windows
