--- a/manifests/b/BitSum/ProcessLasso/11.0.0.34/BitSum.ProcessLasso.locale.en-US.yaml
+++ b/manifests/b/BitSum/ProcessLasso/11.0.0.34/BitSum.ProcessLasso.locale.en-US.yaml
@@ -24,7 +24,7 @@ Tags:
 - optimizer
 - priority
 - process
-ReleaseNotes: |
+ReleaseNotes: |-
   - Adjustment to BHP for Alder Lake on Win10 (specifically)
   - Refinement of memory priority feature
   - Minor fixes and enhancements
