Make Multi-line Field Exclude ending Newline

--- a/manifests/c/Citrix/Workspace/22.2.0.4525/Citrix.Workspace.locale.en-US.yaml
+++ b/manifests/c/Citrix/Workspace/22.2.0.4525/Citrix.Workspace.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - remote-desktop
 - workspace
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Fixed issues in 2202
   Install, Uninstall, Upgrade
   • When you upgrade Citrix Workspace app for Windows from Version CU4 to Version CU5 without installing self-service, the following prompt might appear
