Make Multi-line Field Exclude ending Newline

--- a/manifests/c/CoocooFroggy/FutureRestore-GUI/1.95/CoocooFroggy.FutureRestore-GUI.locale.en-US.yaml
+++ b/manifests/c/CoocooFroggy/FutureRestore-GUI/1.95/CoocooFroggy.FutureRestore-GUI.locale.en-US.yaml
@@ -21,7 +21,7 @@ Description: |
 Moniker: futurerestore-gui
 # Tags: 
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Miscellaneous:
   • Change URL where logs are uploaded
   • Update dependencies
