Make Multi-line Field Exclude ending Newline

--- a/manifests/c/Corsair/iCUE/4/4.19.191/Corsair.iCUE.4.locale.en-US.yaml
+++ b/manifests/c/Corsair/iCUE/4/4.19.191/Corsair.iCUE.4.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - rgb
 - utility
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Software enhancements
   • ASUS integration now has a lighting effect assigned by default.
   • Duplicate devices on the home screen no longer have numbers in their names.
