Make Multi-line Field Exclude ending Newline

--- a/manifests/c/Corsair/iCUE/4/4.20.169/Corsair.iCUE.4.locale.en-US.yaml
+++ b/manifests/c/Corsair/iCUE/4/4.20.169/Corsair.iCUE.4.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - rgb
 - utility
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Software enhancements
 
   • ASUS Integration now has a lighting effect assigned by default.
