--- a/manifests/d/den4b/Hasher/4.1.0.0/den4b.Hasher.locale.en-US.yaml
+++ b/manifests/d/den4b/Hasher/4.1.0.0/den4b.Hasher.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - verification
 - verify
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Changed build environment to Lazarus 1.8.4 + FPC 3.0.4.
   Dropped support for Windows 9x platform. New list of supported platforms: Windows 2000 and later.
   Enhanced storage path resolution with new path tags and handling of multiple path tags.
