--- a/manifests/d/Doomsday/Doomsday/2.3.1.3685/Doomsday.Doomsday.locale.en-US.yaml
+++ b/manifests/d/Doomsday/Doomsday/2.3.1.3685/Doomsday.Doomsday.locale.en-US.yaml
@@ -23,7 +23,7 @@ Tags:
 - fps
 - game
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Patch release for 2.3 that fixes some incorrect behavior: 
   • Heretic: Sky textures are only partially visible.
   • Hexen: Sky textures are sized incorrectly.
