Make Multi-line Field Exclude ending Newline

--- a/manifests/d/DuongDieuPhap/ImageGlass/8.5.1.22/DuongDieuPhap.ImageGlass.locale.en-US.yaml
+++ b/manifests/d/DuongDieuPhap/ImageGlass/8.5.1.22/DuongDieuPhap.ImageGlass.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - photo-viewer
 - picture
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   🌱 New:
   • Added support for QOI image format.
   • Added an option to play sound when a number of images change (#1199), thanks to @AutomationBoi.
