Make Multi-line Field Exclude ending Newline

--- a/manifests/d/DygmaLabs/Bazecor/0.3.4/DygmaLabs.Bazecor.locale.en-US.yaml
+++ b/manifests/d/DygmaLabs/Bazecor/0.3.4/DygmaLabs.Bazecor.locale.en-US.yaml
@@ -22,7 +22,7 @@ ShortDescription: The Bazecor configurator software allows you to remap any key 
 # Moniker: 
 # Tags: 
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   This will be the final release of the Material UI Bazecor!
 ReleaseNotesUrl: https://github.com/Dygmalab/Bazecor/releases/tag/v0.3.4
 ManifestType: defaultLocale
