Make Multi-line Field Exclude ending Newline

--- a/manifests/e/EaseUS/PartitionMaster/16.5/EaseUS.PartitionMaster.locale.en-US.yaml
+++ b/manifests/e/EaseUS/PartitionMaster/16.5/EaseUS.PartitionMaster.locale.en-US.yaml
@@ -27,7 +27,7 @@ Tags:
 - boot
 - EaseUS
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Optimized Resize/Move function
   - Added Extend/Shrink function
   - Basically supportd ExFAT disks
