Make Multi-line Field Exclude ending Newline

--- a/manifests/e/Eassos/DiskGenius/5.4.3/Eassos.DiskGenius.locale.en-US.yaml
+++ b/manifests/e/Eassos/DiskGenius/5.4.3/Eassos.DiskGenius.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - system
 - volume
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   1. Support to copy files from mapped network disk to the partition opened by the application by way of dragging the mouse or pressing the Ctrl_C and Ctrl_V keys.
   2. Enhance the judgment of file types such as CR3, MOV, MP4, MRW, etc. when recovering files by type.
   3. The 'Modify Partition Parameters' dialog box adds features to modify GUID partition attributes.
