Make Multi-line Field Exclude ending Newline

--- a/manifests/e/Elastic/Winlogbeat/7.17.0/Elastic.Winlogbeat.locale.en-US.yaml
+++ b/manifests/e/Elastic/Winlogbeat/7.17.0/Elastic.Winlogbeat.locale.en-US.yaml
@@ -23,7 +23,7 @@ Description: |
 # Moniker: 
 # Tags: 
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • Change Docker base image from CentOS 7 to Ubuntu 20.04 29681
   • Enrich kubernetes metadata with node annotations. 29605
   • Add support for custom XML queries 1054 29330
