Make Multi-line Field Exclude ending Newline

--- a/manifests/e/Elastic/Winlogbeat/8.0.0/Elastic.Winlogbeat.locale.en-US.yaml
+++ b/manifests/e/Elastic/Winlogbeat/8.0.0/Elastic.Winlogbeat.locale.en-US.yaml
@@ -23,7 +23,7 @@ Description: |
 # Moniker: 
 # Tags: 
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Breaking changes
   • Remove the deprecated xpack.monitoring.* settings. Going forward only monitoring.* settings may be used. 9424 18608
   • Remove deprecated/undocumented IncludeCreatorMetadata setting from kubernetes metadata config options 28006
