Make Multi-line Field Exclude ending Newline

--- a/manifests/f/FXHOME/HitFilmExpress/18.0.12407.12817/FXHOME.HitFilmExpress.locale.en-US.yaml
+++ b/manifests/f/FXHOME/HitFilmExpress/18.0.12407.12817/FXHOME.HitFilmExpress.locale.en-US.yaml
@@ -24,7 +24,7 @@ Agreement:
     AgreementUrl: https://fxhome.com/eula
   - AgreementLabel: Terms of Use
     AgreementUrl: https://fxhome.com/terms
-ReleaseNotes: |
+ReleaseNotes: |-
   - Switching timelines while the orbit tool is active no longer causes stability issues.
   - Deleting the active camera while the orbit tool is selected no longer causes stability issues.
   - Switching between 2D and 3D timelines while the text tool is active no longer causes stability issues.
