--- a/manifests/h/Harmonoid/Harmonoid/0.1.9.0/Harmonoid.Harmonoid.locale.en-US.yaml
+++ b/manifests/h/Harmonoid/Harmonoid/0.1.9.0/Harmonoid.Harmonoid.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - tag-parsing
 - windows
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   New! Material re-designed UI. Now very strictly following material.io guidelines (@alexmercerind).
   New! Material designed iconography & icons for various UI elements.
   New! Better context menus for desktop (@alexmercerind).
