Make Multi-line Field Exclude ending Newline

--- a/manifests/h/Henry++/MemReduct/3.4/Henry++.MemReduct.locale.en-US.yaml
+++ b/manifests/h/Henry++/MemReduct/3.4/Henry++.MemReduct.locale.en-US.yaml
@@ -30,7 +30,7 @@ Tags:
 - memory-monitoring
 - monitoring
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • security code improvements
   • improved windows 10 support
   • added arm64 binaries (portable only)
