Make Multi-line Field Exclude ending Newline

--- a/manifests/i/Internxt/Drive/1.6.0/Internxt.Drive.locale.en-US.yaml
+++ b/manifests/i/Internxt/Drive/1.6.0/Internxt.Drive.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - decentralized
 - storage
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • Update electron besides most of the tooling
   • Better colors, sizes and animations
   • Make backups navegable and based on folders
