Make Multi-line Field Exclude ending Newline

--- a/manifests/i/IrfanSkiljan/IrfanView/4.59/IrfanSkiljan.IrfanView.locale.en-US.yaml
+++ b/manifests/i/IrfanSkiljan/IrfanView/4.59/IrfanSkiljan.IrfanView.locale.en-US.yaml
@@ -30,7 +30,7 @@ Tags:
 - photo
 - picture
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • New JPG saving option: Show preview image (to adjust quality and filesize)
   • Support for JXL format (JPEG XL, reading and saving; PlugIn)
        (must be enabled in menu: Help->Installed PlugIns)
