--- a/manifests/i/IrfanSkiljan/IrfanView/4.60/IrfanSkiljan.IrfanView.locale.en-US.yaml
+++ b/manifests/i/IrfanSkiljan/IrfanView/4.60/IrfanSkiljan.IrfanView.locale.en-US.yaml
@@ -30,7 +30,7 @@ Tags:
 - photo
 - picture
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • JPG save preview dialog: Options to zoom/scroll the preview image
   • New option in File menu: Compare current image with another image
   • Option for Favorite menus (Edit menu); Right mouse click on menu item
