Make Multi-line Field Exclude ending Newline

--- a/manifests/i/IsWiX/IsWiX/4.15.34.0/IsWiX.IsWiX.locale.en-US.yaml
+++ b/manifests/i/IsWiX/IsWiX/4.15.34.0/IsWiX.IsWiX.locale.en-US.yaml
@@ -27,7 +27,7 @@ Tags:
 - visualstudio
 - wix
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Recreate VS2022 AddIn from scratch using latest VSIX project template.
   Remove Micrsoft.VisualStudio.Interop.dll from the GAC as this was causing VS2022 crashes.
 ReleaseNotesUrl: https://github.com/iswix-llc/iswix/releases/tag/v4.15.34.0
