--- a/manifests/i/IsWiX/IsWiX/4.15.35.0/IsWiX.IsWiX.locale.en-US.yaml
+++ b/manifests/i/IsWiX/IsWiX/4.15.35.0/IsWiX.IsWiX.locale.en-US.yaml
@@ -27,7 +27,7 @@ Tags:
 - visualstudio
 - wix
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Remove legacy support for vs2013, vs2015 and vs2017.
   By having Application.sln and Installer.sln the Application.sln can be any version of VS you like and the Installer.sln can be vs2019 or vs2022.
 
