Make Multi-line Field Exclude ending Newline

--- a/manifests/k/katahiromz/RisohEditor/5.6.8/katahiromz.RisohEditor.locale.en-US.yaml
+++ b/manifests/k/katahiromz/RisohEditor/5.6.8/katahiromz.RisohEditor.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - EXE
 - DLL
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Changed the initial focus of IDD_CTRLPROP.
   - Fixed some version info.
 ReleaseNotesUrl: https://github.com/katahiromz/RisohEditor/releases/tag/5.6.8
