Make Multi-line Field Exclude ending Newline

--- a/manifests/k/katahiromz/RisohEditor/5.6.9/katahiromz.RisohEditor.locale.en-US.yaml
+++ b/manifests/k/katahiromz/RisohEditor/5.6.9/katahiromz.RisohEditor.locale.en-US.yaml
@@ -32,7 +32,7 @@ Tags:
 - resource
 - software
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Splited the history text.
   - Renamed READMEs.
   - Added WS_CLIPCHILDREN for RAD window to reduce flickering.
