Make Multi-line Field Exclude ending Newline

--- a/manifests/k/katahiromz/RisohEditor/5.7.0/katahiromz.RisohEditor.locale.en-US.yaml
+++ b/manifests/k/katahiromz/RisohEditor/5.7.0/katahiromz.RisohEditor.locale.en-US.yaml
@@ -32,7 +32,7 @@ Tags:
 - resource
 - software
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Fixed recompilation in management of resource IDs.
 ReleaseNotesUrl: https://github.com/katahiromz/RisohEditor/releases/tag/5.7.0
 ManifestType: defaultLocale
