--- a/manifests/h/Harmonoid/Harmonoid/0.1.9.0/Harmonoid.Harmonoid.locale.en-US.yaml
+++ b/manifests/h/Harmonoid/Harmonoid/0.1.9.0/Harmonoid.Harmonoid.locale.en-US.yaml
@@ -14,7 +14,7 @@ PackageUrl: https://github.com/harmonoid/harmonoid
 License: GNU General Public License v3.0
 # LicenseUrl: https://raw.githubusercontent.com/harmonoid/harmonoid/master/LICENSE
 Copyright: Copyright © 2021, Hitesh Kumar Saini <saini123hitesh@gmail.com>
-CopyrightUrl: https://raw.githubusercontent.com/harmonoid/harmonoid/master/LICENSE
+# CopyrightUrl: https://raw.githubusercontent.com/harmonoid/harmonoid/master/LICENSE
 ShortDescription: Elegant music app to play local music & YouTube music. Distributes music into albums & artists. Has playlists & lyrics.
 # Description: 
 # Moniker: 
