Make Multi-line Field Exclude ending Newline

--- a/manifests/i/ImageLine/FLStudio/20.9.0.2748/ImageLine.FLStudio.locale.en-US.yaml
+++ b/manifests/i/ImageLine/FLStudio/20.9.0.2748/ImageLine.FLStudio.locale.en-US.yaml
@@ -15,8 +15,7 @@ License: Proprietary
 LicenseUrl: https://www.image-line.com/image-line-software-eula/
 # Copyright: 
 # CopyrightUrl: 
-ShortDescription: |
-  Digital Audio Workstation for composing, recording, editing and producing music using samples,  software synthesizers and external MIDI instruments.
+ShortDescription: Digital Audio Workstation for composing, recording, editing and producing music using samples,  software synthesizers and external MIDI instruments.
 # Description: 
 # Moniker: 
 Tags:
