Make Multi-line Field Exclude ending Newline

--- a/manifests/c/calibre/calibre/6.3.0/calibre.calibre.locale.en-US.yaml
+++ b/manifests/c/calibre/calibre/6.3.0/calibre.calibre.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://github.com/kovidgoyal/calibre/blob/master/LICENSE
 # Copyright: 
 CopyrightUrl: https://github.com/kovidgoyal/calibre/blob/master/LICENSE
 ShortDescription: calibre is a powerful and easy to use e-book manager
-Description: |
+Description: |-
   calibre is an e-book manager. It can view, convert, edit and catalog e-books in all of the major e-book formats.
   It can also talk to e-book reader devices.
   It can go out to the internet and fetch metadata for your books.
