--- a/manifests/c/Citrix/Workspace/22.2.0.4525/Citrix.Workspace.locale.en-US.yaml
+++ b/manifests/c/Citrix/Workspace/22.2.0.4525/Citrix.Workspace.locale.en-US.yaml
@@ -16,7 +16,7 @@ License: Proprietary
 Copyright: © 1999-2022 Citrix Systems, Inc. All rights reserved.
 CopyrightUrl: https://www.citrix.com/about/legal/brand-guidelines
 ShortDescription: Citrix Workspace is a complete digital workspace solution that delivers secure access to the information, apps, and other content that is relevant to a person’s role in your organization.
-Description: |
+Description: |-
   Citrix Workspace is a complete digital workspace solution that delivers secure access to the information, apps, and other content that is relevant to a person’s role in your organization.
   Users subscribe to the services you make available and can access them from anywhere, on any device.
   Citrix Workspace helps you organize and automate the most important details that your users need to collaborate, make better decisions, and focus on their work.
