--- a/manifests/d/DuongDieuPhap/ImageGlass/8.5.1.22/DuongDieuPhap.ImageGlass.locale.en-US.yaml
+++ b/manifests/d/DuongDieuPhap/ImageGlass/8.5.1.22/DuongDieuPhap.ImageGlass.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://github.com/d2phap/ImageGlass/blob/develop/LICENSE
 Copyright: ImageGlass is copyright (c) 2010 - 2019 by Duong Dieu Phap.
 CopyrightUrl: https://github.com/d2phap/ImageGlass/blob/develop/LICENSE
 ShortDescription: A lightweight, versatile image viewer
-Description: |
+Description: |-
   ImageGlass is a simple picture viewer with which you will be able to display your image collection in a very similar way to the one that Windows provides by default, but with some additional functions.
   This application will allow you to better manage your pictures thanks to the options it includes and the extension it enables to install for adding more functions and widening its possibilities.
 Moniker: imageglass
