--- a/manifests/d/DygmaLabs/Bazecor/0.3.4/DygmaLabs.Bazecor.locale.en-US.yaml
+++ b/manifests/d/DygmaLabs/Bazecor/0.3.4/DygmaLabs.Bazecor.locale.en-US.yaml
@@ -13,7 +13,7 @@ PackageName: Bazecor
 PackageUrl: https://github.com/Dygmalab/Bazecor
 License: GNU General Public License v3.0
 LicenseUrl: https://github.com/Dygmalab/Bazecor/blob/master/COPYING
-Copyright: |
+Copyright: |-
   Copyright © 2018, 2019 Keyboardio Inc.
   Copyright © 2018, 2019 DygmaLab SE
 CopyrightUrl: https://github.com/Dygmalab/Bazecor/blob/master/COPYING
