--- a/manifests/o/Overwolf/overwolf/2.205.0.4/overwolf.overwolf.installer.yaml
+++ b/manifests/o/Overwolf/overwolf/2.205.0.4/overwolf.overwolf.installer.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.1.4 $debug=NVS1.7-3-0-preview-7
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
-PackageIdentifier: overwolf.overwolf
+PackageIdentifier: Overwolf.Overwolf
 PackageVersion: 2.205.0.4
 MinimumOSVersion: 10.0.0.0
 InstallerType: exe
