--- a/manifests/o/Overwolf/Overwolf/2.205.0.4/Overwolf.Overwolf.installer.yaml
+++ b/manifests/o/Overwolf/Overwolf/2.205.0.4/Overwolf.Overwolf.installer.yaml
@@ -11,7 +11,7 @@ InstallerSwitches:
 UpgradeBehavior: install
 Installers:
 - Architecture: neutral
-  InstallerUrl: https://download.overwolf.com/installer/prod/0e5c7905bf0728dbbceaacef3fa9a696/OverwolfInstaller.exe
-  InstallerSha256: C8DA6E997E3D2018C54C986EC24A7ED41165DC0856495842D153486ED665B8B9
+  InstallerUrl: https://download.overwolf.com/OverwolfInstaller.exe
+  InstallerSha256: D6261AF9EB474589AF3D3F4DDF8F853395DF7EC5FB3F68F67E3C099E698D9A05
 ManifestType: installer
 ManifestVersion: 1.2.0
