Make Multi-line Field Exclude ending Newline

--- a/manifests/i/IsWiX/IsWiX/4.15.34.0/IsWiX.IsWiX.locale.en-US.yaml
+++ b/manifests/i/IsWiX/IsWiX/4.15.34.0/IsWiX.IsWiX.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://github.com/iswix-llc/iswix/blob/master/MS-PL.txt
 Copyright: Copyright 2010-2019 ISWIX LLC
 CopyrightUrl: https://github.com/iswix-llc/iswix/blob/master/MS-PL.txt
 ShortDescription: Industrial Strength Windows Installer XML Application 
-Description: |
+Description: |-
   Industrial Strength Windows Installer XML ( IsWiX ) makes authoring Windows Installer XML (WiX) Windows Installers (.MSI) a breeze.
   It includes Visual Studio project templates and graphical designers to aid you in authoring 95% of your source code.
   From there you can author additional code using standard WiX programming techniques.
