--- a/manifests/j/JamieOConnell/MIDI-OX/7.02.373/JamieOConnell.MIDI-OX.locale.en-US.yaml
+++ b/manifests/j/JamieOConnell/MIDI-OX/7.02.373/JamieOConnell.MIDI-OX.locale.en-US.yaml
@@ -16,7 +16,7 @@ License: Freeware
 Copyright: Copyright © 1996-2010 by Jamie O'Connell and Jerry Jorgenrud
 # CopyrightUrl: 
 ShortDescription: Multi-purpose MIDI tool
-Description: |
+Description: |-
   MIDI-OX is a multi-purpose tool: it is both a diagnostic tool and a System Exclusive librarian. It can perform filtering and mapping of MIDI data streams. It displays incoming MIDI streams, and passes the data to a MIDI output driver or the MIDI Mapper. You can generate MIDI data using the computer keyboard or the built-in control panel. You can even record and log MIDI data and then convert it to a Standard MIDI File for playback by a sequencer.
 # Moniker: 
 Tags:
