--- a/manifests/i/IrfanSkiljan/IrfanView/4.59/IrfanSkiljan.IrfanView.locale.en-US.yaml
+++ b/manifests/i/IrfanSkiljan/IrfanView/4.59/IrfanSkiljan.IrfanView.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://www.irfanview.com/eula.htm
 Copyright: Copyright (C) 2021 by Irfan Skiljan, Wiener Neustadt, Austria.
 CopyrightUrl: https://www.irfanview.com/eula.htm
 ShortDescription: Fast and compact image viewer and converter
-Description: |
+Description: |-
   IrfanView is an image viewer, editor, organiser and converter program for Microsoft Windows.
   It can also play video and audio files, and has some image creation and painting capabilities.
   IrfanView is free for non-commercial use; commercial use requires paid registration.
