Make Multi-line Field Exclude ending Newline

--- a/manifests/l/LAIPIC/Perfoo/1.0.5/LAIPIC.Perfoo.locale.zh-CN.yaml
+++ b/manifests/l/LAIPIC/Perfoo/1.0.5/LAIPIC.Perfoo.locale.zh-CN.yaml
@@ -24,7 +24,7 @@ Tags:
 - 演示
 - 演示文稿
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   1、【文档分享】文档分享流程优化，增加小程序分享功能；
   2、【页面优化】工作台页面优化，操作体验更加便捷；
   3、【问题修复】解决了部分已知 bug，提升你的产品体验。
