Make Multi-line Field Exclude ending Newline

--- a/manifests/l/LINE/LINE/7.11.0.2821/LINE.LINE.locale.en-US.yaml
+++ b/manifests/l/LINE/LINE/7.11.0.2821/LINE.LINE.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://terms.line.me/line_terms?lang=en
 Copyright: Copyright LINE Corporation All Rights Reserved.
 CopyrightUrl: https://terms.line.me/line_terms?lang=en
 ShortDescription: Free SMS, Free Voice call messenger application.
-Description: |
+Description: |-
   LINE reshapes communication around the globe, allowing you to enjoy not only messaging but also free voice and video calls wherever you find yourself.
   Download LINE and discover the reasons for its global popularity and number one ranking in 52 countries.
 Moniker: line
