--- a/manifests/w/Wondershare/MobileTrans/4.0.1/Wondershare.MobileTrans.locale.en-US.yaml
+++ b/manifests/w/Wondershare/MobileTrans/4.0.1/Wondershare.MobileTrans.locale.en-US.yaml
@@ -37,7 +37,7 @@ ReleaseNotes: |-
 PurchaseUrl: https://mobiletrans.wondershare.com/buy/pricing-for-individuals-windows.html
 # InstallationNotes: 
 Documentations:
-- DocumentLabel: User guide
+- DocumentLabel: User Guide
   DocumentUrl: https://mobiletrans.wondershare.com/guide/
 - DocumentLabel: FAQ
   DocumentUrl: https://mobiletrans.wondershare.com/faq/
