Make Multi-line Field Exclude ending Newline

--- a/manifests/m/mIRC/mIRC/7.68/mIRC.mIRC.locale.en-US.yaml
+++ b/manifests/m/mIRC/mIRC/7.68/mIRC.mIRC.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://www.mirc.com/eula.html
 Copyright: Copyright © 1995-2022 mIRC Co. Ltd.
 # CopyrightUrl: 
 ShortDescription: IRC (Internet Relay Chat) client
-Description: |
+Description: |-
   mIRC is a popular Internet Relay Chat client used by individuals and organizations to communicate, share, play and work with each other on IRC networks around the world. Serving the Internet community for over two decades, mIRC has evolved into a powerful, reliable and fun piece of technology.
 # Moniker: 
 Tags:
