Make Multi-line Field Exclude ending Newline

--- a/manifests/m/mRemoteNG/mRemoteNG/1.76.20.24615/mRemoteNG.mRemoteNG.locale.en-US.yaml
+++ b/manifests/m/mRemoteNG/mRemoteNG/1.76.20.24615/mRemoteNG.mRemoteNG.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - telnet
 - vnc
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Fixes:
   • #1401: Connections corrupted when importing RDC Manager files that are missing certain fields
 ReleaseNotesUrl: https://github.com/mRemoteNG/mRemoteNG/releases/tag/v1.76.20
