Make Multi-line Field Exclude ending Newline

--- a/manifests/m/Mumble/Mumble/1.3.4/Mumble.Mumble.locale.en-US.yaml
+++ b/manifests/m/Mumble/Mumble/1.3.4/Mumble.Mumble.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - voice-chat
 - voip
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Client
   • Fixed: Don't use outdated (non-existent) notification icon names on Linux (#4705)
   • Fixed: Security vulnerability caused by allowing non http/https URL schemes in public server list (#4733)
