Make Multi-line Field Exclude ending Newline

--- a/manifests/n/Neux/OneMark/0.2.10/Neux.OneMark.locale.zh-CN.yaml
+++ b/manifests/n/Neux/OneMark/0.2.10/Neux.OneMark.locale.zh-CN.yaml
@@ -22,7 +22,7 @@ Tags:
 - markdown
 - onenote
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - [新增] 优化深色模式下代码块、引用等元素的配色。(仅对新创建的内容有效)
   - [修复] 默认读取并使用 OneNote 选项中的字体与字号配置。(仅对新创建的笔记有效)
   - [修复] 粘贴的链接在渲染后会变成普通文本。
