Make Multi-line Field Exclude ending Newline

--- a/manifests/o/OpenStreetMap/Josm/1.5.18387/OpenStreetMap.Josm.locale.en-US.yaml
+++ b/manifests/o/OpenStreetMap/Josm/1.5.18387/OpenStreetMap.Josm.locale.en-US.yaml
@@ -10,7 +10,7 @@ PackageUrl: https://josm.openstreetmap.de
 License: GPL v2 or later
 LicenseUrl: https://josm.openstreetmap.de/browser/josm/trunk/LICENSE
 ShortDescription: JOSM is an extensible editor for OpenStreetMap (OSM) for Java 17+
-ReleaseNotes: |
+ReleaseNotes: |-
   • Minor enhancements
     ◦ Improve support for {apikey} replacement for WMTS and WMS.
   • Add/improve/fix/change Internal Presets, Map Paint Style and Validation rules
