Make Multi-line Field Exclude ending Newline

--- a/manifests/o/OpenStreetMap/Josm/1.5.18463/OpenStreetMap.Josm.locale.en-US.yaml
+++ b/manifests/o/OpenStreetMap/Josm/1.5.18463/OpenStreetMap.Josm.locale.en-US.yaml
@@ -9,7 +9,7 @@ PackageUrl: https://josm.openstreetmap.de
 License: GPL v2 or later
 LicenseUrl: https://josm.openstreetmap.de/browser/josm/trunk/LICENSE
 ShortDescription: JOSM is an extensible editor for OpenStreetMap (OSM) for Java 17+
-ReleaseNotes: |
+ReleaseNotes: |-
   • Major enhancements
     ◦ Mac now uses ⌘ instead of ctrl for most `Select` map mode actions (including `Rotate` and `Scale`)
   • Minor enhancements
