Make Multi-line Field Exclude ending Newline

--- a/manifests/o/OpenWhisperSystems/Signal/5.28.0/OpenWhisperSystems.Signal.locale.en-US.yaml
+++ b/manifests/o/OpenWhisperSystems/Signal/5.28.0/OpenWhisperSystems.Signal.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - security
 - texting
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • New year, new initial setup screen. We've redesigned the initial setup screens just in time for 2022.
 ReleaseNotesUrl: https://github.com/signalapp/Signal-Desktop/releases/tag/v5.28.0
 ManifestType: defaultLocale
