--- a/manifests/o/OpenWhisperSystems/Signal/5.29.0/OpenWhisperSystems.Signal.locale.en-US.yaml
+++ b/manifests/o/OpenWhisperSystems/Signal/5.29.0/OpenWhisperSystems.Signal.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - security
 - texting
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • Now, with fewer frantic searches for the loud typist or heavy chewer! In the call lobby, Desktop will now automatically disable audio if there are eight or more people in the call.
 ReleaseNotesUrl: https://github.com/signalapp/Signal-Desktop/releases/tag/v5.29.0
 ManifestType: defaultLocale
