Make Multi-line Field Exclude ending Newline

--- a/manifests/o/OpenWhisperSystems/Signal/5.29.1/OpenWhisperSystems.Signal.locale.en-US.yaml
+++ b/manifests/o/OpenWhisperSystems/Signal/5.29.1/OpenWhisperSystems.Signal.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - security
 - texting
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • This version contains a number of small tweaks and bug fixes to keep Signal running smoothly.
 ReleaseNotesUrl: https://github.com/signalapp/Signal-Desktop/releases/tag/v5.29.1
 ManifestType: defaultLocale
