Make Multi-line Field Exclude ending Newline

--- a/manifests/o/OpenWhisperSystems/Signal/5.31.0/OpenWhisperSystems.Signal.locale.en-US.yaml
+++ b/manifests/o/OpenWhisperSystems/Signal/5.31.0/OpenWhisperSystems.Signal.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - security
 - texting
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   • Endlessly scroll through your conversations and feel confident that wherever you are in the conversation you will know when.
   • Shuffled around the spacing in the left pane header and search area and now there is so much room for activities!
   • This version contains a number of small tweaks and bug fixes to keep Signal running smoothly.
