--- a/manifests/t/Tencent/TencentMeeting/3.10.8.405/Tencent.TencentMeeting.locale.en-US.yaml
+++ b/manifests/t/Tencent/TencentMeeting/3.10.8.405/Tencent.TencentMeeting.locale.en-US.yaml
@@ -30,7 +30,7 @@ ReleaseNotesUrl: https://meeting.tencent.com/support.html?tab=42
 PurchaseUrl: https://meeting.tencent.com/buy/
 # InstallationNotes: 
 Documentations:
-- DocumentLabel: 使用指南
+- DocumentLabel: Guide
   DocumentUrl: https://meeting.tencent.com/support/
 ManifestType: defaultLocale
 ManifestVersion: 1.2.0
