--- a/manifests/r/RevoUninstaller/RevoUninstaller/2.3.9/RevoUninstaller.RevoUninstaller.locale.en-US.yaml
+++ b/manifests/r/RevoUninstaller/RevoUninstaller/2.3.9/RevoUninstaller.RevoUninstaller.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://www.revouninstaller.com/revo-uninstaller-pro-eula/
 Copyright: Copyright VS Revo Group
 CopyrightUrl: https://www.revouninstaller.com/revo-uninstaller-pro-eula/
 ShortDescription: Revo Uninstaller helps you to uninstall software and remove unwanted programs easily.
-Description: |
+Description: |-
   Revo Uninstaller is a freeware uninstall utility.
   It has powerful features to uninstall programs scanning for leftover files, folders and registry entries after uninstall.
   With its unique 'Hunter mode' it offers you some simple, easy to use but effective and powerful approaches to manage (uninstall, stop, delete, disable from auto starting) and to get information about your installed and/or running application.
