Modify: Tencent.COSBrowser version 2.9.2

--- a/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.installer.yaml
+++ b/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.installer.yaml
@@ -4,13 +4,14 @@
 PackageIdentifier: Tencent.COSBrowser
 PackageVersion: 2.9.2
 MinimumOSVersion: 10.0.0.0
-InstallerType: nullsoft
+InstallerType: nullsoft # electron-builder
 Scope: machine
 InstallerSwitches:
   Upgrade: --updated
 UpgradeBehavior: install
 Protocols:
 - cosbrowser
+ReleaseDate: 2022-09-01
 Installers:
 - Architecture: x86
   InstallerUrl: https://cos5.cloud.tencent.com/cosbrowser/cosbrowser-setup-2.9.2.exe
