--- a/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.locale.en-US.yaml
+++ b/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.locale.en-US.yaml
@@ -27,7 +27,7 @@ Tags:
 # PurchaseUrl: 
 # InstallationNotes: 
 Documentations:
-- DocumentLabel: User guide
+- DocumentLabel: User Guide
   DocumentUrl: https://intl.cloud.tencent.com/document/product/436/32565
 ManifestType: defaultLocale
 ManifestVersion: 1.2.0
