--- a/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/COSBrowser/2.9.2/Tencent.COSBrowser.locale.zh-CN.yaml
@@ -23,7 +23,10 @@ Tags:
 - 对象存储
 - 腾讯云
 # Agreements: 
-# ReleaseNotes: 
+ReleaseNotes: |-
+  修复授权码无法登陆的问题
+  修复存储桶列表权限管理无法打开。
+  修复存储桶列表访问路径跳转无法跳转至正确的路径下而是在根路径下的问题。
 # ReleaseNotesUrl: 
 # PurchaseUrl: 
 # InstallationNotes: 
