--- a/manifests/l/Logseq/Logseq/0.8.3/Logseq.Logseq.installer.yaml
+++ b/manifests/l/Logseq/Logseq/0.8.3/Logseq.Logseq.installer.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Logseq.Logseq
 PackageVersion: 0.8.3
 MinimumOSVersion: 10.0.0.0
-InstallerType: exe
+InstallerType: exe # Squirrel
 Scope: user
 InstallModes:
 - interactive
