--- a/manifests/l/Logseq/Logseq/0.8.3/Logseq.Logseq.locale.en-US.yaml
+++ b/manifests/l/Logseq/Logseq/0.8.3/Logseq.Logseq.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 0.8.3
 PackageLocale: en-US
 Publisher: Logseq
 PublisherUrl: https://logseq.com/
-PublisherSupportUrl: https://discord.gg/KpN4eHY
+PublisherSupportUrl: https://discuss.logseq.com/
 PrivacyUrl: https://docs.logseq.com/#/page/Privacy%20Policy
 Author: Logseq
 PackageName: Logseq
@@ -36,7 +36,50 @@ Tags:
 - to-do
 - todo
 # Agreements: 
-# ReleaseNotes: 
+ReleaseNotes: |-
+  - [[Features]]
+    - Config option to allow for longer, richer property values, new config option :rich-property-values? #6336
+    - Find in page on electron, use CMD+F or Ctrl+F to search term in current page Documentation #6443
+
+  - [[Thanks]]
+    - [[David Vargas]]
+      - Add an option to skip redirect on page rename
+    - [[Viktor Moros]]
+      - Improve backtick auto-pairing
+      - Adding E2E test for scenario with text after a soft return
+    - [[Giuseppe D'Andrea]]
+      - Fix shift-click on recently searched page
+    - [[Mike Travers]]
+      - Shift click on “Journals” opens latest in the right sidebar
+    - [[Kan-Ru Chen]]
+      - Update electron 19.0.12, fixed a bug in wayland rendering for Linux desktops
+    - [[queeup]]
+      - Update Turkish translation
+    - [[star.lit]]
+      - Add guide to speed up build process on Windows
+    - [[swk777]]
+      - Re-enabling Journals options does not work when default home page is filled out
+
+  - [[Fixed issues]]
+    - Shift-click on recently searched page #6461
+    - Electron-only commands should only show up in electron #6469
+    - CJK hashtag update failure #6479
+    - Hide icon page property #6473
+    - Handle delete image with no actual file #6482
+    - Error while importing from edn/json #6477
+    - Handle invalid property names #6492
+    - Re-enabling Journals options does not work when home page is filled out #6498
+    - Tabindex react dev warnings #6520
+    - Custom css not reload #6510
+    - Search or editor frozen caused by large text #6455
+
+  - [[Enhancement]]
+    - Massive accessibility enhancements #6442
+    - Tips of plugin loader perf #6467
+    - Improved backtick auto-pairing #6496
+    - Shift click on “Journals” opens latest in the right sidebar #6511
+    - I18n: update Turkish translation #6507
+    - Add an option to skip redirect on page rename #6519
 ReleaseNotesUrl: https://github.com/logseq/logseq/releases/tag/0.8.3
 PurchaseUrl: https://opencollective.com/logseq
 # InstallationNotes: 
