Make Multi-line Field Exclude ending Newline

--- a/manifests/s/StephanDilly/gitui/0.21.0/StephanDilly.gitui.locale.en-US.yaml
+++ b/manifests/s/StephanDilly/gitui/0.21.0/StephanDilly.gitui.locale.en-US.yaml
@@ -20,7 +20,7 @@ Tags:
 - command-line-tool
 - git
 - git-ui
-ReleaseNotes: |+
+ReleaseNotes: |-+
 
  Added
   • stack popups (https://github.com/extrawurst/gitui/846)
