--- a/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.en-US.yaml
+++ b/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 0.8.4
 PackageLocale: en-US
 Publisher: Logseq
 PublisherUrl: https://logseq.com/
-PublisherSupportUrl: https://discord.gg/KpN4eHY
+PublisherSupportUrl: https://discuss.logseq.com/
 PrivacyUrl: https://docs.logseq.com/#/page/Privacy%20Policy
 Author: Logseq
 PackageName: Logseq
@@ -36,7 +36,16 @@ Tags:
 - to-do
 - todo
 # Agreements: 
-# ReleaseNotes: 
+ReleaseNotes: |-
+  This is a minor upgrade to fix bugs for the Android platform.
+
+  - [[Fixed issues]]
+    - Do not loading persist vars when nil graph #6542
+    - Recover open new window button #6540
+    - Android crash at start, accessing illegal path #6551
+
+  - [[Enhancement]]
+    - Nested scroll container for left sidebar dynamic modules #6553
 ReleaseNotesUrl: https://github.com/logseq/logseq/releases/tag/0.8.4
 PurchaseUrl: https://opencollective.com/logseq
 # InstallationNotes: 
