--- a/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.zh-CN.yaml
+++ b/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 0.8.4
 PackageLocale: zh-CN
 Publisher: Logseq
 PublisherUrl: https://logseq.com/
-PublisherSupportUrl: https://discuss.logseq.com/
+PublisherSupportUrl: https://cn.logseq.com/
 PrivacyUrl: https://docs.logseq.com/#/page/Privacy%20Policy
 Author: Logseq
 PackageName: Logseq
