--- a/manifests/d/Dio/PureCodec/20220831/Dio.PureCodec.installer.yaml
+++ b/manifests/d/Dio/PureCodec/20220831/Dio.PureCodec.installer.yaml
@@ -181,11 +181,11 @@ FileExtensions:
 ReleaseDate: 2022-08-31
 Installers:
 - Architecture: x86
-  InstallerUrl: http://192.168.1.3:8080/PureCodec20220831.exe
+  InstallerUrl: http://dl-t1.wmzhe.com/13/13163/PureCodec20220831.exe
   InstallerSha256: B3BD819EACADF1BA026ECE376A0CC1BD9FAA8418A1A388E8DA59C11446FC61AC
   ProductCode: PureCodec
 - Architecture: x64
-  InstallerUrl: http://192.168.1.3:8080/PureCodec20220831.exe
+  InstallerUrl: http://dl-t1.wmzhe.com/13/13163/PureCodec20220831.exe
   InstallerSha256: B3BD819EACADF1BA026ECE376A0CC1BD9FAA8418A1A388E8DA59C11446FC61AC
   ProductCode: PureCodec
 ManifestType: installer
