--- a/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.zh-CN.yaml
+++ b/manifests/l/Logseq/Logseq/0.8.4/Logseq.Logseq.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 0.8.4
 PackageLocale: zh-CN
 Publisher: Logseq
 PublisherUrl: https://logseq.com/
-PublisherSupportUrl: https://discord.gg/xYqcrXWymg
+PublisherSupportUrl: https://cn.logseq.com/
 PrivacyUrl: https://docs.logseq.com/#/page/Privacy%20Policy
 Author: Logseq
 PackageName: Logseq
@@ -37,7 +37,7 @@ Tags:
 - 脑图
 # Agreements: 
 # ReleaseNotes: 
-# ReleaseNotesUrl: 
+ReleaseNotesUrl: https://github.com/logseq/logseq/releases/tag/0.8.4
 PurchaseUrl: https://opencollective.com/logseq
 # InstallationNotes: 
 Documentations:
