--- a/manifests/t/Tencent/WeChat/3.2.1.112/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.2.1.112/Tencent.WeChat.locale.zh-CN.yaml
@@ -31,7 +31,7 @@ Tags:
 - 腾讯
 - Tencent
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 可以浏览聊天中分享的视频号视频和视频号直播；
   - 解决了一些已知问题。
 ReleaseNotesUrl: https://weixin.qq.com/cgi-bin/readtemplate?lang=zh_CN&t=page/faq/win/321/index&faq=win_321
