Make Multi-line Field Exclude ending Newline

--- a/manifests/t/Tencent/WeChat/3.3.0.93/Tencent.WeChat.locale.en-US.yaml
+++ b/manifests/t/Tencent/WeChat/3.3.0.93/Tencent.WeChat.locale.en-US.yaml
@@ -33,7 +33,7 @@ Tags:
 - Tencent
 - 微信
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - View Moments;
   - Search Official Accounts, Mini Programs, stickers, videos, and articles;
   - Bug fixes and improvements.
