--- a/manifests/t/Tencent/WeChat/3.3.0.93/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.3.0.93/Tencent.WeChat.locale.zh-CN.yaml
@@ -31,7 +31,7 @@ Tags:
 - 腾讯
 - Tencent
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 可以浏览朋友圈；
   - 可以在搜一搜中搜索公众号、小程序、表情、视频、文章等内容；
   - 修复了一些已知问题。
