--- a/manifests/t/Tencent/WeChat/3.3.5.34/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.3.5.34/Tencent.WeChat.locale.zh-CN.yaml
@@ -31,7 +31,7 @@ Tags:
 - 腾讯
 - Tencent
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 修复了一些已知问题。
 ReleaseNotesUrl: https://weixin.qq.com/cgi-bin/readtemplate?lang=zh_CN&t=page/faq/win/335/index&faq=win_335
 ManifestType: locale
