--- a/manifests/t/Tencent/WeChat/3.4.0.38/Tencent.WeChat.locale.en-US.yaml
+++ b/manifests/t/Tencent/WeChat/3.4.0.38/Tencent.WeChat.locale.en-US.yaml
@@ -33,7 +33,7 @@ Tags:
 - Tencent
 - 微信
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Bug fixes and improvements.
 # ReleaseNotesUrl: 
 ManifestType: defaultLocale
