--- a/manifests/t/Tencent/WeChat/3.4.5.27/Tencent.WeChat.locale.en-US.yaml
+++ b/manifests/t/Tencent/WeChat/3.4.5.27/Tencent.WeChat.locale.en-US.yaml
@@ -33,7 +33,7 @@ Tags:
 - Tencent
 - 微信
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Add muted group chats to "Minimized Groups".
   - Hide stickied chats.
   - Bug fixes and improvements.
