Make Multi-line Field Exclude ending Newline

--- a/manifests/t/Tencent/WeChat/3.4.5.27/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.4.5.27/Tencent.WeChat.locale.zh-CN.yaml
@@ -31,7 +31,7 @@ Tags:
 - 腾讯
 - Tencent
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 可以把免打扰的群收进「折叠的群聊」。
   - 置顶聊天过多时，可以将其折叠。
   - 修复了一些已知问题。
