Make Multi-line Field Exclude ending Newline

--- a/manifests/t/Tencent/WeChat/3.5.0.46/Tencent.WeChat.locale.en-US.yaml
+++ b/manifests/t/Tencent/WeChat/3.5.0.46/Tencent.WeChat.locale.en-US.yaml
@@ -32,7 +32,7 @@ Tags:
 - Moments
 - Mini-Programs
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Channels is available for users to search videos and live streams they enjoy.
   - Bug fixes and improvements.
 # ReleaseNotesUrl: 
