--- a/manifests/t/Tencent/WeChat/3.5.0.46/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.5.0.46/Tencent.WeChat.locale.zh-CN.yaml
@@ -34,7 +34,7 @@ Tags:
 - 朋友圈
 - 小程序
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 新增视频号，探索喜爱的视频和直播。
   - 修复了一些已知问题。
 ReleaseNotesUrl: https://weixin.qq.com/cgi-bin/readtemplate?lang=zh_CN&t=page/faq/win/350/index&faq=win_350
