Make Multi-line Field Exclude ending Newline

--- a/manifests/t/Tencent/WeChat/3.6.0.18/Tencent.WeChat.locale.en-US.yaml
+++ b/manifests/t/Tencent/WeChat/3.6.0.18/Tencent.WeChat.locale.en-US.yaml
@@ -32,7 +32,7 @@ Tags:
 - Moments
 - Mini-Programs
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - Add friends by searching WeChat IDs.
   - Scan QR codes or Mini Program codes by taking screenshots.
   - Scan multiple QR codes and Mini Program codes in an image.
