--- a/manifests/t/Tencent/WeChat/3.6.0.18/Tencent.WeChat.locale.zh-CN.yaml
+++ b/manifests/t/Tencent/WeChat/3.6.0.18/Tencent.WeChat.locale.zh-CN.yaml
@@ -34,7 +34,7 @@ Tags:
 - 朋友圈
 - 小程序
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   - 可以查找微信号并添加朋友
   - 可以通过截图来识别二维码或小程序码
   - 可以识别图片中的多个二维码和小程序码
