Make Multi-line Field Exclude ending Newline

--- a/manifests/u/uvncbvba/UltraVnc/1.3.6.0/uvncbvba.UltraVnc.locale.en-US.yaml
+++ b/manifests/u/uvncbvba/UltraVnc/1.3.6.0/uvncbvba.UltraVnc.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://www.gnu.org/licenses/gpl-3.0.html
 Copyright: Copyright © 2007 Free Software Foundation, Inc.
 CopyrightUrl: https://www.gnu.org/licenses/gpl-3.0.html
 ShortDescription: VNC client and server graphical desktop sharing via RFB protocol
-Description: |
+Description: |-
   UltraVNC is an open source application that uses the VNC protocol to control another computer remotely over a network connection.
   UltraVNC allows the use of a remote computer as if the user were in front of it.
   This is achieved by sending mouse movements and key-presses to the remote computer, and replicating the remote computer's display (subject to differences in resolution) locally in real time.
