does scope: user fix it?

--- a/manifests/s/Spotify/Spotify/1.1.92.647.ga4397eb7/Spotify.Spotify.installer.yaml
+++ b/manifests/s/Spotify/Spotify/1.1.92.647.ga4397eb7/Spotify.Spotify.installer.yaml
@@ -15,6 +15,7 @@ UpgradeBehavior: install
 ElevationRequirement: elevationProhibited
 Installers:
 - Architecture: x86
+  Scope: user
   InstallerUrl: https://download.scdn.co/SpotifyFullSetup.exe
   InstallerSha256: 8B060A5F874AF1BFF55DE951C8D1CD791793766A9D3A46A61631AA9075D32490
 ManifestType: installer
