--- a/manifests/w/Wacom/WacomTabletDriver/6.3.44-3/Wacom.WacomTabletDriver.locale.en-US.yaml
+++ b/manifests/w/Wacom/WacomTabletDriver/6.3.44-3/Wacom.WacomTabletDriver.locale.en-US.yaml
@@ -20,7 +20,7 @@ ShortDescription: Drivers for Wacom Tablet.
 Moniker: wacomtabletdriver
 Tags:
 - driver
-ReleaseNotes: |
+ReleaseNotes: |-
   • This driver release supports the new Wacom Cintiq Pro 16 pen display (DTH167).
   • Internal improvements to increase driver stability.
   • New support for Wacom functions/gestures in Corel Painter 2022.
