Make Multi-line Field Exclude ending Newline

--- a/manifests/w/Wacom/WacomTabletDriver/6.3.46-1/Wacom.WacomTabletDriver.locale.en-US.yaml
+++ b/manifests/w/Wacom/WacomTabletDriver/6.3.46-1/Wacom.WacomTabletDriver.locale.en-US.yaml
@@ -20,7 +20,7 @@ ShortDescription: Drivers for Wacom Tablet.
 Moniker: wacomtabletdriver
 Tags:
 - driver
-ReleaseNotes: |
+ReleaseNotes: |-
   • Improved support for Borix FX'S Mocha Pro and Continuum applications.
   • Updated our bundled, third-party drivers to be compatible with the Windows Core Isolation feature.
 ReleaseNotesUrl: https://cdn.wacom.com/u/productsupport/drivers/win/professional/releasenotes/Windows_6.3.46.html
