Make Multi-line Field Exclude ending Newline

--- a/manifests/w/WillowSoftware/AnvilStudio/21.08.01/WillowSoftware.AnvilStudio.locale.en-US.yaml
+++ b/manifests/w/WillowSoftware/AnvilStudio/21.08.01/WillowSoftware.AnvilStudio.locale.en-US.yaml
@@ -16,7 +16,7 @@ License: Proprietary
 Copyright: Copyright © 1997-2021 by Willow Software
 # CopyrightUrl: 
 ShortDescription: Create songs with extensive MIDI and Audio editing capabilities
-Description: |
+Description: |-
   Anvil Studio ™ is a free Windows 10 / 8.x / 7 Program designed for people who want to:
   • record music with MIDI and Audio equipment
   • compose music for MIDI and Audio equipment
