Make Multi-line Field Exclude ending Newline

--- a/manifests/w/WiseCleaner/WiseDataRecovery/6.1.2/WiseCleaner.WiseDataRecovery.locale.en-US.yaml
+++ b/manifests/w/WiseCleaner/WiseDataRecovery/6.1.2/WiseCleaner.WiseDataRecovery.locale.en-US.yaml
@@ -21,7 +21,7 @@ Moniker: wisedatarecovery
 Tags:
 - data-recovery
 - recovery
-ReleaseNotes: |
+ReleaseNotes: |-
   1. Fixed the issue where the next scan gets stuck after previewing deleted files.
   2. Fixed the issue where the recovery gets stuck if the selected drive does not have enough free space.
   3. Fixed minor bugs in the previous version.
