Make Multi-line Field Exclude ending Newline

--- a/manifests/w/Wondershare/Filmii/1.7.3.5/Wondershare.Filmii.locale.en-US.yaml
+++ b/manifests/w/Wondershare/Filmii/1.7.3.5/Wondershare.Filmii.locale.en-US.yaml
@@ -31,7 +31,7 @@ Tags:
 - video-editing
 - video-editor
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   1.New templates for Promo、Vlog
   2.Updated Ai logic-smarter and faster
   3.Bug Fixes
