--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,8 @@
+.editorconfig text eol=crlf
+*.json text eol=crlf
+*.md text eol=crlf
+*.ps1 text eol=crlf
+*.txt text eol=crlf
+*.validation text eol=crlf
+*.yml text=auto
 *.yaml text=auto
