Make Multi-line Field Exclude ending Newline

--- a/manifests/w/Wondershare/PDFelement/8.3.10/Wondershare.PDFelement.locale.en-US.yaml
+++ b/manifests/w/Wondershare/PDFelement/8.3.10/Wondershare.PDFelement.locale.en-US.yaml
@@ -32,7 +32,7 @@ Tags:
 - convert
 - OCR
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   New
   - Add grid view function;
   - Support to locking comment;
