Make Multi-line Field Exclude ending Newline

--- a/manifests/w/Wondershare/PDFelement/8.3.14/Wondershare.PDFelement.locale.en-US.yaml
+++ b/manifests/w/Wondershare/PDFelement/8.3.14/Wondershare.PDFelement.locale.en-US.yaml
@@ -33,7 +33,7 @@ Tags:
 - reader
 - viewer
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   New
   - Support to grid view preference setting;
   - Support to merging odd and even pages in the scan;
