Add package in use expected return code for OBS Studio

--- a/manifests/o/OBSProject/OBSStudio/28.0.0/OBSProject.OBSStudio.installer.yaml
+++ b/manifests/o/OBSProject/OBSStudio/28.0.0/OBSProject.OBSStudio.installer.yaml
@@ -19,6 +19,9 @@ Installers:
   InstallerType: nullsoft
   InstallerUrl: https://github.com/obsproject/obs-studio/releases/download/28.0.0/OBS-Studio-28.0-Full-Installer-x64.exe
   InstallerSha256: 6D0A0B69291FCB844A1F535B1CCE31CEA10EB52899C71DE828B82B214C43D568
+  ExpectedReturnCodes:
+    - InstallerReturnCode: 6
+      ReturnResponse: packageInUse
 ManifestType: installer
 ManifestVersion: 1.2.0
 
