--- a/manifests/o/OBSProject/OBSStudio/Pre-release/28.0.0-rc2/OBSProject.OBSStudio.Pre-release.installer.yaml
+++ b/manifests/o/OBSProject/OBSStudio/Pre-release/28.0.0-rc2/OBSProject.OBSStudio.Pre-release.installer.yaml
@@ -20,5 +20,8 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/obsproject/obs-studio/releases/download/28.0.0-rc2/OBS-Studio-28.0-rc2-Full-Installer-x64.exe
   InstallerSha256: D6F6ED0B2B0336B274041CF93DE6AC6FB3E415346F5B0E154B25E4A120CD5C7B
+  ExpectedReturnCodes:
+    - InstallerReturnCode: 6
+      ReturnResponse: packageInUse
 ManifestType: installer
 ManifestVersion: 1.2.0
