Make Multi-line Field Exclude ending Newline

--- a/manifests/x/XMind/XMind/11.0.2/XMind.XMind.locale.en-US.yaml
+++ b/manifests/x/XMind/XMind/11.0.2/XMind.XMind.locale.en-US.yaml
@@ -22,7 +22,7 @@ Tags:
 - mindmap
 - mind-map
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   1. Fixed the map display issue in the 32-bit version of Windows;
   2. Fixed the error when exporting PNG in evaluation mode;
   3. Fixed the error when editing a custom theme;
