--- a/manifests/m/mRemoteNG/mRemoteNG/1.76.20.24615/mRemoteNG.mRemoteNG.locale.en-US.yaml
+++ b/manifests/m/mRemoteNG/mRemoteNG/1.76.20.24615/mRemoteNG.mRemoteNG.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: Next Generation Software
 PackageName: mRemoteNG
 PackageUrl: https://mremoteng.org
 License: GNU General Public License v2.0
-LicenseUrl: https://github.com/mRemoteNG/mRemoteNG/blob/develop/COPYING.TXT
+# LicenseUrl: https://github.com/mRemoteNG/mRemoteNG/blob/develop/COPYING.TXT
 # Copyright: 
 # CopyrightUrl: 
 ShortDescription: mRemoteNG is an open source, tabbed, multi-protocol, and remote connections manager.
