--- a/manifests/l/LAIPIC/Perfoo/1.0.5/LAIPIC.Perfoo.locale.zh-CN.yaml
+++ b/manifests/l/LAIPIC/Perfoo/1.0.5/LAIPIC.Perfoo.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 1.0.5
 PackageLocale: zh-CN
 Publisher: 深圳市前海手绘科技文化有限公司 # null
 PublisherUrl: https://www.laihua.com/
-PublisherSupportUrl: https://support.laihua.com/ys-pc
+# PublisherSupportUrl: https://support.laihua.com/ys-pc
 PrivacyUrl: https://www.laihua.com/about/privacy
 Author: 深圳市前海手绘科技文化有限公司
 PackageName: Perfoo
