--- a/manifests/l/LAIPIC/LaiHuaVideo/1.1.0/LAIPIC.LaiHuaVideo.locale.zh-CN.yaml
+++ b/manifests/l/LAIPIC/LaiHuaVideo/1.1.0/LAIPIC.LaiHuaVideo.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 1.1.0
 PackageLocale: zh-CN
 Publisher: laihua
 PublisherUrl: https://www.laihua.com/
-PublisherSupportUrl: https://support.laihua.com/sp-pc
+# PublisherSupportUrl: https://support.laihua.com/sp-pc
 PrivacyUrl: https://www.laihua.com/about/privacy
 Author: 深圳市前海手绘科技文化有限公司
 PackageName: LaiHuaVideo
