--- a/manifests/p/Promethean/ScreenShare/3.2.0.0/Promethean.ScreenShare.yaml
+++ b/manifests/p/Promethean/ScreenShare/3.2.0.0/Promethean.ScreenShare.yaml
@@ -1,9 +1,8 @@
-# Created using wingetcreate 1.0.4.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.5 $debug=AUSU.CRLF.5-1-22000-653.Win32NT
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.2.0.schema.json
 
 PackageIdentifier: Promethean.ScreenShare
 PackageVersion: 3.2.0.0
 DefaultLocale: de
 ManifestType: version
-ManifestVersion: 1.1.0
-
+ManifestVersion: 1.2.0
