--- a/manifests/k/Kiwix/WikiMed/1.9.9.0/Kiwix.WikiMed.installer.yaml
+++ b/manifests/k/Kiwix/WikiMed/1.9.9.0/Kiwix.WikiMed.installer.yaml
@@ -7,7 +7,7 @@ Installers:
   - Windows.Universal
   MinimumOSVersion: 10.0.10240.0
   Architecture: neutral
-  InstallerType: msix
+  InstallerType: appx
   InstallerUrl: https://github.com/kiwix/kiwix-js-windows/releases/download/v1.9.9-WikiMed/KiwixWebAppWikiMed_1.9.9.0_AnyCPU.appxbundle
   InstallerSha256: 6440675D3A1A37221385CB830306CA32971402FBE2271E01D167E905394992D9
   SignatureSha256: 086CBF0DFA4F9E89F5CD9D15BB920DA51FA27022F5F1363312941FC08A832BEE
