--- a/manifests/k/Kiwix/WikiMed/1.9.8.0/Kiwix.WikiMed.installer.yaml
+++ b/manifests/k/Kiwix/WikiMed/1.9.8.0/Kiwix.WikiMed.installer.yaml
@@ -8,7 +8,7 @@ Installers:
   - Windows.Universal
   MinimumOSVersion: 10.0.10240.0
   Architecture: neutral
-  InstallerType: msix
+  InstallerType: appx
   InstallerUrl: https://github.com/kiwix/kiwix-js-windows/releases/download/v1.9.8-WikiMed/KiwixWebAppWikiMed_1.9.8.0_AnyCPU.appxbundle
   InstallerSha256: 816777825935F37AE6A169164CD14D30665CFC3721C4C6D5E098FF47FC455EAA
   SignatureSha256: B3B4303F4AB37E776EF736A92064A8546C838C865339A2BFCE985C660E6D6F23
