--- a/manifests/u/Unicorn/PaintAid/2.1.3.0/Unicorn.PaintAid.locale.zh-CN.yaml
+++ b/manifests/u/Unicorn/PaintAid/2.1.3.0/Unicorn.PaintAid.locale.zh-CN.yaml
@@ -6,8 +6,8 @@ PackageVersion: 2.1.3.0
 PackageLocale: zh-CN
 Publisher: XIAMEN UNICORN Co.. LTD.
 PublisherUrl: https://www.udongman.cn/
-PublisherSupportUrl: https://www.udongman.cn/index.php?m=feedback&a=main
-PrivacyUrl: https://www.udongman.cn/index.php?m=content&a=user_secret_policy
+# PublisherSupportUrl: https://www.udongman.cn/index.php?m=feedback&a=main
+# PrivacyUrl: https://www.udongman.cn/index.php?m=content&a=user_secret_policy
 Author: 厦门优莱柏网络科技有限公司
 PackageName: 绘画助手
 PackageUrl: https://www.udongman.cn/index.php?m=product&c=paintaid
