--- a/manifests/t/TypingInnovationGroup/TypingMaster/11.00/TypingInnovationGroup.TypingMaster.locale.en-US.yaml
+++ b/manifests/t/TypingInnovationGroup/TypingMaster/11.00/TypingInnovationGroup.TypingMaster.locale.en-US.yaml
@@ -16,7 +16,10 @@ License: Proprietary
 Copyright: (c) 2021 Typing Master Ltd. All rights reserved.
 # CopyrightUrl: 
 ShortDescription: TypingMaster is a touch typing tutor that adapts to your unique needs.
-Description: "TypingMaster is a touch typing tutor that adapts to your unique needs. \nIt provides over 10 hours of customized exercises to guide you step by step to professional keyboarding. \nAs a result your typing speed is likely to double - or even triple - and you will save hours and hours of valuable working time.\n"
+Description: |-
+  TypingMaster is a touch typing tutor that adapts to your unique needs. 
+  It provides over 10 hours of customized exercises to guide you step by step to professional keyboarding. 
+  As a result your typing speed is likely to double - or even triple - and you will save hours and hours of valuable working time.
 Moniker: typing-master
 Tags:
 - keyboarding
