--- a/manifests/s/SnailDOS/StreamBop/1.5.4/SnailDOS.StreamBop.locale.en-US.yaml
+++ b/manifests/s/SnailDOS/StreamBop/1.5.4/SnailDOS.StreamBop.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://github.com/snaildos/StreamBop/tree/main
 PublisherSupportUrl: https://github.com/snaildos/StreamBop/issues
 # PrivacyUrl: 
 Author: SnailDOS
-PackageName: streambop
+PackageName: StreamBop
 PackageUrl: https://github.com/snaildos/StreamBop/tree/main
 License: GNU General Public License v3.0
 LicenseUrl: https://github.com/snaildos/StreamBop/blob/main/LICENSE
