--- a/manifests/s/SnailDOS/StreamBop/1.5.4/SnailDOS.StreamBop.installer.yaml
+++ b/manifests/s/SnailDOS/StreamBop/1.5.4/SnailDOS.StreamBop.installer.yaml
@@ -10,5 +10,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/snaildos/StreamBop/releases/download/v1.5.4/StreamBop-Setup-1.5.4.exe
   InstallerSha256: AF4ACCC451FD1E3BAC7116F5742977B76349B0B38B56C280C7E18DAB6610F79E
+  ProductCode: 55176200-95a2-5957-b9b5-cd8ab4e87ab5
 ManifestType: installer
 ManifestVersion: 1.2.0
