--- a/manifests/u/Ubisoft/Connect/133.1.10715/Ubisoft.Connect.locale.en-US.yaml
+++ b/manifests/u/Ubisoft/Connect/133.1.10715/Ubisoft.Connect.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=AUSU.7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: Ubisoft.Connect
-PackageVersion: 133.0.10702
+PackageVersion: 133.1.10715
 PackageLocale: en-US
 Publisher: Ubisoft
 PublisherUrl: https://www.ubisoft.com/en-us/
@@ -28,5 +28,8 @@ Tags:
 # Agreements: 
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
+# PurchaseUrl: 
+# InstallationNotes: 
+# Documentations: 
 ManifestType: defaultLocale
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
