--- a/manifests/o/Overwolf/CurseForge/0.206.3-6102/Overwolf.CurseForge.locale.en-US.yaml
+++ b/manifests/o/Overwolf/CurseForge/0.206.3-6102/Overwolf.CurseForge.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: Overwolf.CurseForge
-PackageVersion: 0.206.2-6009
+PackageVersion: 0.206.3-6102
 PackageLocale: en-US
 Publisher: Overwolf
 PublisherUrl: https://www.overwolf.com/
