--- a/manifests/m/Miro/Miro/0.7.19/Miro.Miro.installer.yaml
+++ b/manifests/m/Miro/Miro/0.7.19/Miro.Miro.installer.yaml
@@ -1,5 +1,5 @@
-# Automatically updated by the winget bot at 2022/Sep/02
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: Miro.Miro
 PackageVersion: 0.7.19
@@ -15,8 +15,11 @@ InstallerSwitches:
   SilentWithProgress: --silent
 UpgradeBehavior: install
 Installers:
+- Architecture: x64
+  InstallerUrl: https://desktop.miro.com/platforms/win32/Miro.exe
+  InstallerSha256: CFBCA87A6ADEC59E8323C9E9B515C9205A60EA2A05DFB59938C97D8552556F02
 - Architecture: x86
   InstallerUrl: https://desktop.miro.com/platforms/win32-x86/Miro.exe
   InstallerSha256: 9CA25E95903CFFDD949A692C23039CC18050F4E6E17BBFD8E87605BA0E85991A
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
