New version: Acronis.CyberProtectHomeOffice version 27.2.40107

--- a/manifests/a/Acronis/CyberProtectHomeOffice/27.2.40107/Acronis.CyberProtectHomeOffice.installer.yaml
+++ b/manifests/a/Acronis/CyberProtectHomeOffice/27.2.40107/Acronis.CyberProtectHomeOffice.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=QUSU.5-1-22616-1
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.5 $debug=QUSU.CRLF.7-2-6.Win32NT
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: Acronis.CyberProtectHomeOffice
-PackageVersion: 26.3.39900
+PackageVersion: 27.2.40107
 MinimumOSVersion: 10.0.0.0
 InstallerType: exe
 Scope: machine
@@ -13,12 +13,12 @@ InstallerSwitches:
 UpgradeBehavior: install
 AppsAndFeaturesEntries:
 - DisplayName: Acronis Cyber Protect Home Office
-  # DisplayVersion: 26.3.39900
   InstallerType: exe
-  ProductCode: '{F2ED7A3B-4EAA-4CE2-977F-0A7576C990BD}Visible'
+  ProductCode: '{C504F517-9E94-47CF-8C12-DFBA40A2B2D5}Visible'
+ReleaseDate: 2022-08-30
 Installers:
 - Architecture: x64
   InstallerUrl: https://dl.acronis.com/u/AcronisCyberProtectHomeOffice.exe
-  InstallerSha256: 9E60D8CE605EC870BA5AC26B97DD75B174EE33F5597A515142C25AE8ABE5D88D
+  InstallerSha256: E4B75FF919A801CD4587C58BD985E19AE50539A22B4E1788A891F6145D93FCC1
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
