--- a/manifests/a/Alibaba/Yuque/1.6.3/Alibaba.Yuque.locale.zh-CN.yaml
+++ b/manifests/a/Alibaba/Yuque/1.6.3/Alibaba.Yuque.locale.zh-CN.yaml
@@ -35,9 +35,23 @@ Tags:
 - 编辑器
 - 表格
 # Agreements: 
-# ReleaseNotes: 
-# ReleaseNotesUrl: 
-# PurchaseUrl: 
+ReleaseNotes: |-
+  - [特性] 画板思维导图支持添加概要
+  - [增强] 升级到全新代码块版本
+  - [增强] 优化小记新图标样式
+  - [增强] 再次打开全局搜索后，默认选中之前的关键字，提升搜索效率
+  - [增强] 软件无法启动时增加友好提示
+  - [增强] 文档历史支持展示本地自动保存数据
+  - [增强] 🆕 更友好的版本提醒机制
+  - [修复] 优化文档下复选框样式
+  - [修复] 小记窗口标签的白色背景过高遮挡文字
+  - [修复] 🆕 编辑器内特殊场景下无法搜索异常
+  - [修复] 🆕 小记提及链接跳转异常
+  - [修复] 🆕 收藏内部分链接在空间下无法正确跳转
+  - [修复] 兼容快捷键保存过快产生发布冲突问题
+  - [修复] 解决不同帐户登录的产生的缓存问题
+ReleaseNotesUrl: https://www.yuque.com/yuque/yuque-desktop/changelog-1-6-3
+PurchaseUrl: https://www.yuque.com/about/price
 # InstallationNotes: 
 # Documentations: 
 ManifestType: locale
